QtQml: Clear cached value type instances when clearing component cache

The value type instances can hold on to compilation units, thereby
keeping parts of the type registry alive.

Pick-to: 6.10 6.8
Fixes: QTBUG-138518
Change-Id: I490d9c7599b80c86236c29a5c009a3d75a1b6d5c
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>